--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
     "@types/node": "^16.7.10",
+    "@types/uuid": "^8.3.1",
     "typescript": "^3.9.10"
   },
   "dependencies": {
@@ -25,7 +26,8 @@
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "uuid": "^8.3.2"
   },
   "prettier": {
     "tabWidth": 2,
