--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
     "@types/node": "^16.7.10",
+    "@types/sqlite3": "^3.1.7",
     "@types/uuid": "^8.3.1",
     "typescript": "^3.9.10"
   },
@@ -27,6 +28,8 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "moment": "^2.29.1",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2",
     "uuid": "^8.3.2"
   },
   "prettier": {
